# causal-validation

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: docs.yml  ruff.yml  test_docs.yml  tests.yml
_examples/azcausal/: index.html
_examples/basic/: index.html
_examples/placebo_test/: index.html
docs/: index.md  installation.md
docs/examples/: azcausal.ipynb  basic.ipynb  placebo_test.ipynb
docs/scripts/: gen_examples.py
docs/stylesheets/: extra.css
examples/: azcausal.pct.py  basic.pct.py  placebo_test.pct.py
examples/azcausal/: index.html
examples/basic/: index.html
examples/placebo_test/: index.html
hooks/: fix_vulnerable_jquery.py  pin_jquery_version.py
installation/: index.html
search/: search_index.json
src/causal_validation/: __about__.py  __init__.py  base.py  config.py  data.py  effects.py  models.py  plotters.py  simulate.py  testing.py  types.py  weights.py
src/causal_validation/estimator/: __init__.py  result.py  utils.py
src/causal_validation/transforms/: __init__.py  base.py  noise.py  parameter.py  periodic.py  trends.py
src/causal_validation/validation/: placebo.py  rmspe.py  testing.py
static/: fig_creation.py  style.mplstyle
tests/: conftest.py
tests/test_causal_validation/: README.md  test_amzn_synthetic_causal_data_gen.py  test_config.py  test_data.py  test_effect.py  test_integration.py  test_models.py  test_plotters.py  test_simulate.py  test_weights.py
tests/test_causal_validation/test_estimator/: test_az_causal.py
tests/test_causal_validation/test_transforms/: test_noise.py  test_periodic.py  test_trends.py
tests/test_causal_validation/test_validation/: test_placebo.py  test_rmspe.py
