[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causal_validation"
dynamic = ["version"]
description = 'A validation framework for causal models.'
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
keywords = [
    "synthetic data", "causal model", "machine learning"
]
authors = [
  { name = "Thomas Pinder", email = "pinthoma@amazon.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "azcausal",
  "beartype",
  "jaxtyping",
  "matplotlib",
  "numpy",
  "pandas",
  "pandera",
  "rich"
]

[tool.hatch.build]
include = ["src/causal_validation"]
packages = ["src/causal_validation"]

[tool.hatch.envs.default]
installer = "uv"
python = "3.10"

[tool.hatch.envs.dev]
dependencies = [
  "mypy",
  "black[jupyter]",
  "isort",
  "pytest",
  "pytest-xdist",
  "pytest-cov",
  "pytest-sugar",
  "coverage",
  "autoflake",
  "ruff",
  "hypothesis",
  "pre-commit",
  "absolufy-imports",
  "ipykernel",
  "ipython",
  "jupytext",
  "nbstripout"
  ]

[tool.hatch.envs.dev.scripts]
test = "pytest --hypothesis-profile causal_validation"
ptest = "pytest -n auto . --hypothesis-profile causal_validation"
black-format = ["black src tests docs/examples"]
imports-format = [
  "isort src tests",
  "isort --profile black docs/examples"
  # "isort docs/examples/*.ipynb --treat-comment-as-code '# %%' --float-to-top",
]
lint-format = ['ruff format src tests docs/examples']
format = ["black-format", "imports-format", "lint-format"]
build_nbs = [
  "jupytext --to notebook examples/*.pct.py",
  "mv examples/*.ipynb nbs"
]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-gen-files",
  "mkdocstrings-python",
  "mkdocs-git-revision-date-localized-plugin",
  "mknotebooks",
  "jupyter",
  "jupytext",
  "ipywidgets",
  "Pygments"
  ]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve --dev-addr localhost:8000"
deploy = "mkdocs build"
build = "mkdocs build"

[tool.hatch.version]
path = "src/causal_validation/__about__.py"

[tool.coverage.run]
source_pkgs = ["causal_validation", "tests"]
branch = true
parallel = true
omit = [
  "src/causal_validation/__about__.py",
]

[tool.coverage.paths]
causal_validation = ["src/causal_validation", "*/causal_validation/src/causal_validation"]
tests = ["tests", "*/causal_validation/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
show_missing = true

[tool.black]
line-length = 88
target-version = ["py310"]


[tool.isort]
profile = "black"
line_length = 88
known_first_party = [ "causal_validation" ]
combine_as_imports = true
force_sort_within_sections = true
force_grid_wrap = 2

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "--color=yes",
    "--cov=causal_validation"
]
testpaths = [ "test" ]
looponfailroots = [
    "src",
    "test",
]

[tool.ruff]
fix = true
cache-dir = "~/.cache/ruff"
line-length = 88
src = ["src", "test"]
target-version = "py310"

[tool.ruff.lint]
dummy-variable-rgx = "^_$"
select = [
  "F",
  "E",
  "W",
  "YTT",
  "B",
  "Q",
  "PLE",
  "PLR",
  "PLW",
  "PIE",
  "PYI",
  "TID",
  "ISC",
]
ignore = ["F722"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
